# ScreenGraphVibe

./: .envrc  .eslintignore  .eslintrc.json  .gitignore  .gitmessage.txt  .prettierignore  @commit  @initSession  @push  APPIUM_TOOLS_SUMMARY.md  CLAUDE.md  CLEANUP_SUMMARY.md  CURRENT_PROJECT_STATUS.md  DEPLOYMENT.md  DOCUMENT_INDEX.md  LOCAL_SETUP.md  PRODUCTION_SETUP.md  README.md  SCRIPTS_GUIDE.md  TESTING.md  env.example  package-lock.json  package.json  start-local.sh  start.sh  test-pre-push.sh  tsconfig.json
.cursor/plans/: backend-45f88886.plan.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  task.yml
.github/workflows/: affected-tests.yml  ai-reviewer.yml  auto-assign.yml  pr-artifacts.yml  pr-metrics.yml  test-agent.yml  unblock-issues.yml
.husky/: pre-push  prepare-commit-msg
.mcp/: ARCHITECTURE - MCP clean architecture and naming guidelines.md  og_message.txt
.mcp/aliases/: Mentions to prompts and personas routing.json
.mcp/personas/: graphitti_memory_optimizer_persona.json  ian_botts_cto.json  jacob_engineer.json  phil_engineer.json  rino_coder.json  rino_root_cause.json  rino_senior.json
.mcp/prompts/: Ian Botts - AI systems expertise guidance.json  Ian Botts - Clean architecture guidance.json  Ian Botts - Deterministic ADR drafting.json  Listen to this — Ian to Rino sync.json  Listen to this — Rino to Ian sync.json  Message with mentions orchestration.json  Rino - Fast implementation.json  Rino - Root cause investigation.json  Rino - Senior implementation and cleanup.json  They - Team reports aggregator.json
agent/: .dockerignore  Dockerfile  fly.toml  package.json
agent/src/: index.ts
backend/: .eslintrc.json  CLAUDE.md  Dockerfile  env.example  fly.toml  openapi.json  package.json  tsconfig.json  vitest.config.ts
backend/scripts/: scaffold-backend-feature.js  scaffold-backend-io-feature.js  scaffold-feature.js
backend/src/: index.ts
ci/: ai-reviewer.mjs  pr-metrics.mjs
data/: CLAUDE.md  drizzle.config.ts  package.json  vitest.config.ts
data/src/: index.ts  migrate.ts  seed.ts  test-globals.d.ts
docs/: DOCUMENT_INDEX.md  README.md  WISHLIST.md  package-lock.json  package.json  session-summary.md  tsconfig.json
docs/architecture/: OVERVIEW.md  sse-graph-mapping.md
docs/decisions/: ADR-20251010-sse-mock-stream.md  ADR-20251011-persona-management-dashboard.md  ADR-20251011-testing-script-normalization.md  DECISIONS.md  README.md
docs/management/: FEATURE_CLOSURE_CHECKLIST.md
docs/retro/: 2025-10-10-long-vertical-slice-ci-and-management-setup-retro.md
docs/setup/: DEPLOYMENT.md  LOCAL_SETUP.md  PRODUCTION_SETUP.md  SCRIPTS_GUIDE.md  TESTING.md  TEST_TROUBLESHOOTING.md
docs/src/: git-hooks.ts  index.ts  indexer.ts  memory.ts  scan.ts  scanner.ts  setup-hooks.ts  update.ts
docs/system-patterns/: README.md
docs/tech-debt/: README.md
docs/templates/: ADR_TEMPLATE.md  ARCHITECTURE_TEMPLATE.md  SYSTEM_PATTERN_TEMPLATE.md  TECH_DEBT_TEMPLATE.md  WISHLIST_TEMPLATE.md
docs/workflows/: AI_REVIEWER.md  BRANCH_MANAGEMENT.md  GRAPHITI_RUNBOOK.md  ISSUE_CREATION.md  README.md
infra/: package.json  vitest.config.ts
infra/src/: config.test.ts  config.ts  deploy.ts  fly.test.ts  fly.ts  index.ts  integration.test.ts  supabase.test.ts  supabase.ts
logging/: .eslintrc.json  package.json  tsconfig.json
logging/src/: index.ts
management/: README.md  package.json  tsconfig.json  vitest.config.ts
management/persona-management/: PLACEHOLDER-44.md  PLACEHOLDER-47.md  PLACEHOLDER-49.md  PLACEHOLDER-50.md  PLACEHOLDER-51.md  PLACEHOLDER-52.md  README.md  RETRO_LOG.md  package.json  tsconfig.json  vitest.config.ts
management/work-plan/: 2025-10-10-parallel-work-assignment.md
mcp/: README.md  package.json
mcp/src/: index.ts
pr-artifacts/: README.md  capture.graph.screenshot.ts
screengraph-agent/: .gitignore  ADAPTERS.md  AGENT.md  ARCHITECTURE.md  BFF.md  CLAUDE.md  DOCS.md  Dockerfile  IMPORT_HEALTH.md  IMPORT_VERIFICATION.md  MIGRATION.md  README.md  SCAFFOLD_COMPLETE.md  SETUP.md  STRUCTURE.md  TEST_ORGANIZATION.md  conftest.py  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  start-dev.sh  start.sh
screengraph-agent/screengraph_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
screengraph-agent/src/adapters/appium/: ADAPTER_NOTES.md
screengraph-agent/src/appium/: __init__.py  types.py  types.ts
screengraph-agent/src/appium/implementations/: android_appium_tools.py  ios_appium_tools.py
screengraph-agent/src/appium/interfaces/: action_tools.py  app_management_tools.py  appium_tools.py  connection_tools.py  data_gathering_tools.py  device_management_tools.py  navigation_tools.py
screengraph-agent/src/bff/: main.py
screengraph-agent/src/ui/: README.md
screengraph-agent/tests/appium/: __init__.py  test_android_tools.py  test_config.py  test_factory.py  test_types.py
scripts/: health-check.sh  stop-local.sh  stop.sh  update-knowledge-graph.sh  update-project-status.sh
scripts/dev/: at.sh  (+6 more)
sessions/: README.md  example-task-2024-01-15T10-30-00.md
setup/: PRODUCTION_SETUP.md
tests/: package.json  playwright-e2e.config.ts  playwright.config.ts  vitest.config.ts  vitest.integration.config.ts
ui/: .dockerignore  .eslintrc.json  Dockerfile  env.example  fly.toml  next.config.js  package.json  tailwind.config.js  vitest.config.mts  vitest.config.ts
(+313 files in other folders)
